12_networking/ingress_controller/example/aks-helloworld-two_deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: aks-helloworld-two  

spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-two
  
  template:
    metadata:
      labels:
        app: aks-helloworld-two
    spec:
      containers:
      - name: aks-helloworld-two
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
