12_networking/ingress_controller/example/aks-helloworld-one_service.yaml
apiVersion: v1
kind: Service

metadata:
  name: aks-helloworld-one

spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld-one # is label from the deployment
