12_networking/ingress_controller/example/aks-helloworld-two_service.yaml
apiVersion: v1
kind: Service

metadata:
  name: aks-helloworld-two  
  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld-two
